# birdtarot

./: .gitignore  cards.yml  meanings.json  pyproject.toml
.github/: README.md
bird_tarot/: build_site.py  format_cards.py  generate.py  generate_local.py  read.py
docs/: CNAME  index.html
site/: index.html
